--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library</title>
     <link rel="stylesheet" href="style.css">
+    <script src="books.js" defer></script>
 </head>
 <body>
-    <script src="books.js"></script>
+    <div class="libraryContainer">
+
+    </div>
 </body>
 </html>
