--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,9 +9,36 @@
     <link rel="stylesheet" href="style.css">
     <script src="books.js" defer></script>
 </head>
-<body>
-    <div class="libraryContainer">
 
+<body>
+    <h1>Library</h1>
+
+    <button class="addBook">Add Book</button>
+
+    <div class="formContainer display">
+        <form action="" class="addForm">
+            <label for="title">Title:</label>
+            <input type="text" id="title" name="title" required><br>
+
+            <label for="author">Author:</label>
+            <input type="text" id="author" name="author" required><br>
+
+            <label for="pages">Pages:</label>
+            <input type="number" id="pages" name="pages" required><br>
+
+            <label for="read">Read:</label>
+            <input type="radio" id="yes" name="read" value="yes">
+            <label for="yes">Yes</label>
+            <input type="radio" id="no" name="read" value="no">
+            <label for="no">No</label><br>
+
+            <input type="submit">
+        </form>
     </div>
+
+    <div class="libraryContainer">
+    </div>
+
 </body>
+
 </html>
