--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <input type="radio" id="no" name="read" value="no">
             <label for="no">No</label><br>
 
-            <input type="submit">
+            <input type="submit" class="submitButton">
         </form>
     </div>
 
